# csw-opc-ua

./: .gitignore  README.md  build.sbt  install.sh
container1/src/main/scala/csw/opc/container1/: Assembly1.scala  Container1.scala
container1/src/main/scala/csw/opcDemo/container1/: Assembly1.scala  Container1.scala
container2/src/main/scala/csw/opc/container2/: Container2.scala  Hcd2.scala  TestConfigActor.scala
container2/src/main/scala/csw/opcDemo/container2/: Container2.scala  Hcd2.scala  OpcUaClient.scala  TestConfigActor.scala
container2Opc/src/main/resources/: container2.conf
container2Opc/src/main/scala/csw/opcDemo/container2/: Container2.scala
container2opc/: build.sbt
container2opc/src/main/resources/: container2.conf
container2opc/src/main/scala/csw/opc/container2/: Container2.scala
doc/: OpcTest.graphml
freeopcuaExampleClient/: CMakeLists.txt  ExampleClient.cpp  ExampleClient.h  README.md  SubClient.h  main.cpp
freeopcuaExampleServer/: CMakeLists.txt  ExampleServer.cpp  ExampleServer.h  README.md  SubClient.h  main.cpp
hardware/src/main/java/csw/opc/client/: JFreeOpcUaDemoClient.java  JOpcDemoClient.java
hardware/src/main/java/csw/opc/server/: OpcDemoCertificateValidationListener.java  OpcDemoEventManagerListener.java  OpcDemoEventType.java  OpcDemoMethodManagerListener.java  OpcDemoNodeManager.java  OpcDemoNodeManagerListener.java  OpcDemoPerfTestMethodManagerListener.java  OpcDemoServer.java  OpcDemoUserValidator.java
hardware/src/main/java/csw/opcDemo/client/: JOpcDemoClient.java
hardware/src/main/java/csw/opcDemo/server/: OpcDemoCertificateValidationListener.java  OpcDemoIoManagerListener.java  OpcDemoNodeManager.java  OpcDemoNodeManagerListener.java  OpcDemoServer.java  OpcDemoUserValidator.java
hardware/src/main/resources/: log.properties
hardware/src/main/scala/csw/opc/client/: FreeOpcDemoClient.scala  OpcDemoClient.scala
hardware/src/test/java/csw/opc/: JFreeOpcUaDemoClientTests.java  JOpcDemoClientTests.java  JOpcDemoPerfTest.java
hardware/src/test/scala/csw/opc/: FreeOpcDemoClientTests.scala  OpcDemoClientTests.scala
hardwareopc/: build.sbt
hardwareopc/src/test/scala/csw/opc/: OpcDemoClientTests.scala
hcd2OpcServer/: README.md
hcd2opc/: build.sbt
opcuasdktest/: README.md  build.sbt
project/: Build.scala  Dependencies.scala  README.md  Settings.scala
scripts/: test_containers_with_opcua.sh
testclient/: README.md  build.sbt
testclient/src/main/java/csw/opc/: JOpcDemoPerfTest.java
testclient/src/main/resources/: log.properties
(+40 files in other folders)
